side_bar updated in html and css
both files are updated

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 <body>
     <div class="container">
         <div class="side_bar">
-            side_bar
+                <div class="side_panel">
+                    <div class="logo">
+                        <a href="">Spotify</a>
+                    </div>
+                    
+                    <a href="">Home</a>
+                    <a href="">Search</a>
+                </div>
+                <div class="side_library">
+                    
+                </div>
         </div>
         <div class="main">
             main
